# ai-devex-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ai-context.toml  pyproject.toml
.ai/memory/: MEMORY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  eval.yml
ai_context/: generator.py  main.py  schema.py  telemetry.py  validator.py
ai_context/commands/: diff.py  generate.py  init.py  stats.py  validate.py
docs/: architecture.md
docs/adr/: 000-record-architecture-decisions.md  001-llm-provider-choice.md  002-structured-output-schema-design.md
docs/superpowers/plans/: 2026-04-06-ai-context-cli.md
results/: cost-by-repo-size.md
tests/eval/: test_cost_eval.py  test_quality_eval.py  test_reliability_eval.py
tests/fixtures/kotlin_service/: README.md  build.gradle.kts
tests/fixtures/minimal_project/: README.md  main.py
tests/fixtures/mixed_monorepo/: README.md  docker-compose.yml
tests/fixtures/mixed_monorepo/apps/api/: main.py
tests/fixtures/python_kafka/: README.md  config.py  consumer.py  models.py  pyproject.toml
tests/fixtures/python_kafka/tests/: test_consumer.py
tests/fixtures/typescript_app/: README.md  package.json
tests/fixtures/typescript_app/src/: api.ts  index.ts
tests/integration/: test_generate_architecture.py  test_generate_conventions.py  test_haiku_vs_sonnet.py
tests/unit/: test_cli.py  test_diff.py  test_file_selector.py  test_generate_internals.py  test_generate_prompt.py  test_init.py  test_stats.py  test_telemetry.py  test_validate.py
(+3 files in other folders)
