[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-context"
version = "0.1.0"
description = "CLI tool to scaffold, manage, and AI-generate .ai/ context for any repo"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "anthropic>=0.25.0",
    "gitpython>=3.1.40",
    "pathspec>=0.12.1",
    "tomli-w>=1.0.0",
    "structlog>=24.1.0",
    "opentelemetry-sdk>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
ai-context = "ai_context.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_context*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ai_context --cov-report=term-missing --cov-fail-under=85"
markers = [
    "integration: marks tests that call the real Claude API (deselect with '-m not integration')",
    "eval: marks behavioral eval tests",
    "use_case: marks integration test scenarios",
]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["tests/fixtures/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["B008"]

[tool.coverage.run]
omit = ["tests/*"]
